agregando archivos html al repo

--- a/pull.html
+++ b/pull.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Agregando titulo al archivo</h1> 
-   <p></p>
+   <p>parrafo N°1</p>
+   <p>parrafo N°1</p><p>parrafo N°1</p>
 </body>
 </html>
