--- a/pull2.html
+++ b/pull2.html
@@ -1,2 +1,17 @@
 <!-- en este archivo hay que empezar a construir una pagina web -->
-sdsad
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+
+
+    <p>Parrafo N°2</p>
+    <p>Parrafo N°2</p><p>parrafo N°1</p>
+</body>
+</html>
